Fix table header issues by using border-collapse: separate.

--- a/src/encoded/static/scss/_main.scss
+++ b/src/encoded/static/scss/_main.scss
@@ -70,9 +70,9 @@ table {
   background: #fff;
   margin: 0 0 18px;
   border: 1px solid #ddd;
-  @include border-radius($baseBorderRadius);
-  /* border-spacing: 2px !important; */
-  border-collapse: collapse;
+  /* @include border-radius($baseBorderRadius); */
+  border-spacing: 0;
+  border-collapse: separate;
   font-size: 0.92em;
   width: 100%;
 }
@@ -91,7 +91,7 @@ table tfoot tr td {
 }
 
 table thead tr th,
-table tfoot tr td { padding: 8px 10px 9px; font-size: ms(0); font-weight: bold; color: #222; border: 2px solid white; }
+table tfoot tr td { padding: 8px 10px 9px; font-size: ms(0); font-weight: bold; color: #222; border: 1px solid white; }
 table thead tr th:first-child, table tfoot tr td:first-child { border-left: none; }
 table thead tr th:last-child, table tfoot tr td:last-child { border-right: none; }
 
